# pytest-pg

./: CHANGELOG.md  LICENSE  Makefile  README.md  pyproject.toml  requirements-dev.txt  setup.py
.github/: CODEOWNERS
.github/workflows/: ci.yml
pytest_pg/: __init__.py  fixtures.py  plugin.py  utils.py
tests/: conftest.py  test_pg.py  test_utils.py
